migrate URL manager to v4 API